# aegis

./: CHANGELOG.md  Cargo.toml  README.md  codecov.yml  deny.toml
.github/: dependabot.yml
.github/workflows/: quality.yml  release.yml
docs/: analyzers.md  troubleshooting.md
src/: cache.rs  ignore.rs  lib.rs  main.rs  pipeline.rs  types.rs
src/analyzers/: ast.rs  binary.rs  comment_strip.rs  cve.rs  dataflow.rs  deptree.rs  hallucination.rs  install_scripts.rs  maintainer.rs  mod.rs  obfuscation.rs  provenance.rs  static_code.rs
src/output/: json.rs  sarif.rs  terminal.rs
src/registry/: client.rs  package.rs  tarball.rs
src/rules/: engine.rs
tests/: integration.rs
